# minimal_js_rust_setup

./: .gitignore  Cargo.toml  README.md
docs/: index.html  index.js
docs/pkg/: minimal_js_rust_setup.d.ts  minimal_js_rust_setup.js  minimal_js_rust_setup_bg.js  minimal_js_rust_setup_bg.wasm  package.json
src/: lib.rs
