[package]
name = "minimal_js_rust_setup"
version = "0.1.0"
authors = ["StephanS <simon.void+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"

[profile.release]
# opt-level valid options are:
#    0: no optimizations
#    1: basic optimizations
#    2: some optimizations
#    3: all optimizations
#    "s": optimize for binary size
#    "z": optimize for binary size, but also turn off loop vectorization.
opt-level = 0